--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "embed/embed": "~3.3"
+        "embed/embed": "~4.4",
+        "nyholm/psr7": "^1.8"
     },
     "autoload": {
         "classmap": ["adapters/"]
